plugins/textCommands/cmdsenders/IridiumSender: Clean URL construction future deprecation.